test/compile_errors/err_no_std_print_requires_std.w
//! args: --no-std
//! expect-check-fail: print requires std

@[panic_handler]
fn on_panic -> Never: unreachable()

@[entry]
fn start -> i32:
    print("hello")
    0
